fix column gap on footer

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -95,7 +95,7 @@
       .footer__container{
             display: grid;
             grid-template-columns: repeat(2,1fr);
-            gap: 1.5rem;
+            column-gap: 5rem;
             text-align: unset;
             /* border: 1px solid red; */
       }
